--- a/styles.css
+++ b/styles.css
@@ -10,27 +10,25 @@ body {
 }
 
 .container {
-  max-width: 900px;
   margin: 10px auto;
   display: flex;
   background: #f8fdff;
   border-radius: 19px;
   box-shadow: 0 4px 32px 10px rgba(33, 58, 78, 0.057);
   overflow: hidden;
-  width: 54%;
-  height: auto;
+  width: 55%;
+  min-width: 800px;
 }
 
 .calculator {
   flex: 1.1;
-  height: 480px;
   padding: 30px 36px 36px 36px;
   background: rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
   justify-content: center;
   min-width: 340px;
-  max-height: 90%;
+  height: fit-content;
 }
 
 .calculator-header {
@@ -289,6 +287,7 @@ body {
   border-radius: 0 0 0 0 / 0 0 80px 0;
   border-bottom-left-radius: 70px;
   min-width: 320px;
+  max-width: 100%;
   position: relative;
 }
 
@@ -394,21 +393,20 @@ body {
     border-radius: 0;
     margin-top: -110px;
     margin-bottom: -20px;
-    width: 100%;
     height: 1150px;
+    min-width: 103%;
   }
   .calculator, .results-panel {
     border-radius: 0;
     flex-direction: column;
-    min-width: unset;
-    width: 95%;
+    width: 93% ;
     padding-left: 10px;
     height: fit-content;
   }
+  
   .results-panel {
     border-radius: 0;
     padding-bottom: 50px;
-    width: 100%;
     height: 400px;
   }
   .results-panel h2 {
