--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
   margin-top: 110px;
   padding: 0;
   background: #E3F4FC;
-  font-family: 'plus-jakarta-sans', sans-serif;
+  font-family: 'plus jakarta sans', sans-serif;
   color: #213a4ee5;
   font-weight: 300;
   font-size: 15px;
